[package]
name = "workflow-nw"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys.workspace = true
nw-sys.workspace = true
wasm-bindgen.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Document',
    'Window',
    'HtmlElement',
    'HtmlVideoElement',
    'CustomEvent',
    'MouseEvent',
    'Navigator',
    'MediaDevices',
    'MediaStreamConstraints',
    'MediaStream',
    'MediaStreamTrack'
]
