[package]
name = "workflow-nw"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["nw","nwjs","node-webkit"]
categories = ["wasm","api-bindings"]
description = """
Framework layer for NWJS desktop application development using async Rust.
"""

[dependencies]
js-sys.workspace = true
nw-sys.workspace = true
wasm-bindgen.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Document',
    'Window',
    'HtmlElement',
    'HtmlVideoElement',
    'CustomEvent',
    'MouseEvent',
    'Navigator',
    'MediaDevices',
    'MediaStreamConstraints',
    'MediaStream',
    'MediaStreamTrack'
]
