[package]
name = "workflow-nw"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["nw","nwjs","node-webkit"]
categories = ["wasm","api-bindings"]
description = """
Framework layer for NWJS desktop application development.
"""

[lib]
doctest = false

[features]
serde-json-ipc = []

[dependencies]
ahash.workspace = true
borsh.workspace = true
js-sys.workspace = true
nw-sys.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'BroadcastChannel',
    'CustomEvent',
    'Document',
    'HtmlElement',
    'HtmlVideoElement',
    'MediaDevices',
    'MediaStream',
    'MediaStreamConstraints',
    'MediaStreamTrack',
    'MessageEvent',
    'MouseEvent',
    'Navigator',
    'Window',
]
