[package]
name = "workflow-panic-hook"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>","Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = """
Based on the console_error_panic_hook this crate provides additional
functionality allowing panic hook to bring up an in-browser overlay
displaying the panic hook stack trace.
"""

[dependencies]
cfg-if.workspace = true
wasm-bindgen.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Window',
]
