[package]
name = "workflow-rpc"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-rpc"
keywords = ["websocket","rpc","wasm","browser"]
categories = ["web-programming::websocket","web-programming::http-client"]
exclude = ["/.*", "/test"]
description = """
RPC layer based on workflow-websocket crate offering native & in-browser clients as well as a native-only server
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash.workspace = true
async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
downcast-rs.workspace = true
futures.workspace = true
manual_future.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc-macros.workspace = true
workflow-websocket.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util.workspace = true
tokio.workspace = true
tungstenite.workspace = true
