[package]
name = "workflow-store"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.0"
keywords = ["wasm","framework","storage","browser","localstorage","file","io"]
categories = []
exclude = ["/.*", "/test"]
description = """
File storage access crate abstracting file I/O and browser localstorage
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std.workspace = true
home.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Storage',
    'Window',
]
