[package]
name = "workflow-store"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","framework","storage","browser","localstorage"]
categories = ["wasm"]
exclude = ["/.*", "/test"]
description = """
File storage access crate abstracting file I/O and browser localstorage
"""

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
base64.workspace = true
cfg-if.workspace = true
js-sys.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_os="solana")))'.dependencies]
async-std.workspace = true
home.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Storage',
    'Window',
]
