[package]
name = "workflow-terminal"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-terminal"
keywords = ["wasm","browser","terminal","cli"]
categories = ["command-line-interface","web-programming::http-client","wasm"]
exclude = ["/.*", "/test"]
description = """
Terminal abstraction layer crate for creating native and in-browser terminal apps
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
regex = "1.5.5"
workflow-log.workspace = true
workflow-wasm.workspace = true
workflow-dom.workspace = true
workflow-core.workspace = true
thiserror = "1.0.32"
numtoa = "0.2.4"
wasm-bindgen-futures = "0.4.33"
async-std = { version = "1.12.0"}
async-trait = "0.1.57"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "1.5.6"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Document',
    'Element',
    'Url',
    'Blob',
    'CustomEvent',
    'EventTarget',
    'KeyboardEvent',
    'Node',
    'NodeList',
    'HtmlCollection',
    'ResizeObserver',
    'CssStyleDeclaration'
]
