[package]
name = "workflow-terminal"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-terminal"
keywords = ["wasm","browser","terminal","cli"]
categories = ["command-line-interface","web-programming::http-client","wasm"]
exclude = ["/.*", "/test"]
description = """
Terminal abstraction layer crate for creating native and in-browser terminal apps
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-std.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
js-sys.workspace = true
numtoa.workspace = true
regex.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Window',
    'Document',
    'Element',
    'Url',
    'Blob',
    'CustomEvent',
    'EventTarget',
    'KeyboardEvent',
    'Node',
    'NodeList',
    'HtmlCollection',
    'ResizeObserver',
    'CssStyleDeclaration'
]
