[package]
name = "workflow-terminal"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.0"
keywords = ["wasm","browser","terminal","cli"]
categories = ["command-line-interface","web-programming::http-client","wasm"]
exclude = ["/.*", "/test"]
description = """
Terminal abstraction layer over Xterm.js and termion crates for 
creating terminal applications that function uniformly in native
(console) and in browser (WASM32) environments.
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-std.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
futures.workspace = true
js-sys.workspace = true
numtoa.workspace = true
regex.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Blob',
    'CssStyleDeclaration',
    'CustomEvent',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCollection',
    'KeyboardEvent',
    'Node',
    'NodeList',
    'ResizeObserver',
    'Url',
    'Window',
]

[dev-dependencies]
tokio.workspace = true
