[package]
name = "workflow-utils"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["utils"]
categories = []
exclude = ["/.*", "/test"]
description = """
Miscellaneous utilities for the workflow-rs ecosystem.
"""

[dependencies]
workflow-core.workspace = true
workflow-http.workspace = true

ahash.workspace = true
thiserror.workspace = true
cliclack.workspace = true
separator.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["json","blocking"] }
