[package]
name = "workflow-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-wasm"
keywords = ["wasm","utilities","browser","buffer","array"]
categories = ["wasm"]
exclude = ["/.*", "/test"]
description = """
WASM utilities for in-browser use (timers, event listeners etc.)
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-panic-hook.workspace = true
workflow-wasm-macros.workspace = true