[package]
name = "workflow-wasm"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.0"
keywords = ["wasm","utilities","browser","buffer","array"]
categories = ["wasm"]
exclude = ["/.*", "/test"]
description = """
WASM utilities for in-browser use (timers, callbacks, etc.)
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
js-sys.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-panic-hook.workspace = true
workflow-wasm-macros.workspace = true
