[package]
name = "workflow-wasm"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["wasm","utilities","browser","buffer","array"]
categories = ["wasm"]
exclude = ["/.*", "/test"]
description = """
WASM utilities for in-browser use (timers, callbacks, etc.)
"""

[features]
no-unsafe-eval = []
channels=[]
default = ["channels"]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
cfg-if.workspace = true
faster-hex.workspace = true
futures.workspace = true
js-sys.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-panic-hook.workspace = true
workflow-wasm-macros.workspace = true
serde-wasm-bindgen.workspace = true