[package]
name = "workflow-websocket"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-websocket"
keywords = ["wasm","websocket","browser","rpc"]
categories = ["web-programming::websocket","web-programming::http-client","api-bindings"]
exclude = ["/.*", "/test"]
description = """
WebSocket crate (client and server) with a uniform native and in-browser async Rust API
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-std.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
downcast-rs.workspace = true
futures-util.workspace = true
futures.workspace = true
thiserror.workspace = true
triggered.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ahash.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies.web-sys]
workspace = true
features = [
    "console",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "CloseEvent",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "DomException",
]
