[package]
name = "workflow-websocket"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.2"
keywords = ["wasm","websocket","browser","rpc"]
categories = ["web-programming::websocket","web-programming::http-client","api-bindings"]
exclude = ["/.*", "/test"]
description = """
WebSocket crate (client and server) providing an async Rust API
that functions uniformly in native and in browser (WASM32)
environments. This crate allows you to develop WebSocket-driven
data exchange that function uniformly in web and desktop applications.
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-std.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
downcast-rs.workspace = true
futures-util.workspace = true
futures.workspace = true
regex.workspace = true
thiserror.workspace = true
triggered.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-task.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ahash.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies.web-sys]
workspace = true
features = [
    "console",
    "BinaryType",
    "Blob",
    "CloseEvent",
    "DomException",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]
