[package]
name = "workflow-core-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-core"
keywords = ["enum"]
categories = []
exclude = ["/.*", "/test"]
description = """
Macros for the workflow-core crate
"""

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
parse-variants.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
sha2.workspace = true
syn.workspace = true
workflow-macro-tools.workspace = true
