[package]
name = "workflow-core-macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version= "0.3.1"
keywords = ["enum"]
categories = []
exclude = ["/.*", "/test"]
description = """
Macros for the workflow-core crate
"""

[lib]
proc-macro = true

[dependencies]
convert_case.workspace = true
parse-variants.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
sha2.workspace = true
syn.workspace = true
workflow-macro-tools.workspace = true
