[package]
name = "workflow-html-macros"
version = "0.1.0"
description = "Workflow Macros for Html Rendering"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
lazy_static.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
syn.workspace = true
