[package]
name = "workflow-html-macros"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = """
Workflow Macros for HTML Rendering
"""

[lib]
proc-macro = true

[dependencies]
lazy_static.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
syn.workspace = true
